fix(style): fix code width on firefox mobile

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -82,6 +82,7 @@ body {
   --vscode-highlight-padding-bottom: 10px;
   --vscode-highlight-padding-left: 10px;
   --vscode-highlight-padding-right: 10px;
+  width: 100%;
 }
 
 code {
