--- a/src/templates/blog-post.module.scss
+++ b/src/templates/blog-post.module.scss
@@ -4,6 +4,7 @@
 
 .blogPost {
   grid-column: 2/14;
+  width: 100%;
 
   figcaption {
     font-size: $footnote-font-size;
